# indu-doc-transformer

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.json  docker-compose.yml  page_settings.json  pyproject.toml
.github/: dependency-review.yml
.github/workflows/: dependency-review.yml  python-app.yml
docs/source/: conf.py  index.rst
docs/source/api/: indu_doc.plugins.eplan_pdfs.rst  indu_doc.plugins.rst  indu_doc.rst  modules.rst
src/gui/: __init__.py  aspects_menu.py  connections_page.py  detail_panel_components.py  global_state.py  gui.py  gui_utils.py  page_settings.json  pdf_handler.py  pdf_preview_page.py  tree_page.py  ui_components.py
src/indu_doc/: __init__.py  aml_builder.py  attributed_base.py  attributes.py  cli.py  common_page_utils.py  common_utils.py  configs.py  connection.py  db.py  extraction_settings.py  extractor.py  footers.py  god.py  lark_parser.py  manager.py  page_processor.py  page_settings.py  plugin_base.py  searcher.py  table_extractor.py  tag.py  xtarget.py
src/indu_doc/exporters/: exporter.py
src/indu_doc/exporters/aml_builder/: aml_abstractions.py  aml_builder.py  aml_exporter.py
src/indu_doc/exporters/db_builder/: db.py  db_exporter.py
src/indu_doc/plugins/: __init__.py  events.py  plugin.py  plugins_common.py
src/indu_doc/plugins/aml_builder/: aml_builder.py
src/indu_doc/plugins/eplan_pdfs/: common_page_utils.py  eplan_pdf_plugin.py  footers_extractor.py  page_processor.py  page_settings.py  table_extractor.py
src/indu_doc_transformer/: __init__.py
src/notebooks/: explore_links.ipynb  extract_conn_and_dev_list.ipynb  extract_objects_from_body.ipynb  extract_objects_from_footer.ipynb  page_detect.ipynb  parser.ipynb
src/page_setup_wizard/: interactive_roi_setup.py  launcher.py  table_loader.py
src/table_setup/: interactive_roi_setup.py  launcher.py  table_loader.py
tests/: __init__.py  conftest.py  test_aml_builder.py  test_attributed_base.py  test_attributes.py  test_cli.py  test_common_page_utils.py  test_configs.py  test_db.py  test_eplan_pdf_plugin.py  test_events.py  test_exporter.py  test_footers.py  test_footers_extractor.py  test_god_additional.py  test_integration.py  test_lark_parser.py  test_manager.py  test_page_processor.py  test_page_settings.py  test_plugin.py  test_searcher.py  test_table_extractor.py  test_tag.py  test_xtarget_connection.py
tests/god_tests/: README.md  test_creation.py  test_god_coverage.py  test_no_duplicates.py
