[project]
name = "indu-doc-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ahmed Abdelhay", email = "ahmedatta2108@gmail.com" }]
requires-python = ">=3.13"

dependencies = [
    "numpy",
    "pandas",
    "pymupdf",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "pikepdf",
    "plotly",
    "networkx",
    "pyvis",
    "ipywidgets",
    "jupyterlab",
    "treelib",
]

[project.scripts]
indu-doc-transformer = "indu_doc_transformer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
