[project]
name = "indu_doc"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed Abdelhay", email = "ahmedatta2108@gmail.com" },
    { name = "Artsiom Drankevich", email = "artem.drankevich@gmail.com" },
]

requires-python = ">=3.13"

dependencies = [
    "pandas",
    "pymupdf",
    "matplotlib",
    "tqdm",
    "plotly",
    "networkx",
    "pyvis",
    "treelib",
    "graphviz",
    "tqdm",
    "pdfplumber>=0.11.7",
    "pandas-stubs>=2.3.2.250827",
    "click>=8.0.0",
]

[project.scripts]
indu_doc = "indu_doc.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip",
    "pyinstaller>=6.15.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "jupyterlab>=4.4.6",
    "ipywidgets>=8.0.0",
    "flake8>=7.3.0",
    "pytest-cov>=6.2.1",
]
test = ["pytest>=8.4.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--verbose"]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
